samples/_failures_safe/1761608690_cc915c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8ebd6fc.c: In function ‘main’:
./samples/SAFE/__tmp_f8ebd6fc.c:154:27: error: expected ‘)’ at end of input
  154 |     if (!read_matrix_input
      |        ~                  ^
      |                           )
./samples/SAFE/__tmp_f8ebd6fc.c:154:5: error: expected declaration or statement at end of input
  154 |     if (!read_matrix_input
      |     ^~
